fixed some details on tablet-view

--- a/css/index.css
+++ b/css/index.css
@@ -332,28 +332,32 @@ footer {
 
 @media(max-width: 800px)
 {
-    *
-    {
-        width: 99%;
-    }
-    
     .container
     {
         width: 100%;
     }
-    .main-content
+    header
     {
-        margin-left: 2%;
+        flex-wrap: wrap;
     }
     header nav
     {
         width: 100%;
-        margin:10% 0 0 5%;
+        padding: 0 2%;
     }
     header .logo
     {
         width: 25%;
         order: -1;
+    }
+    .cta
+    {
+        justify-content: center;
+        padding-left: 12%;
+    }
+    .cta .cta-text
+    {
+        
     }
     .cta img
     {
@@ -362,14 +366,16 @@ footer {
     .main-content
     {
         width: 100%;
+        padding: 0 2%;
     }
     .main-content .middle-img {
         display: block;
+        width: 100%;
         margin: 30px 0 30px 0;
     }
     .contact
     {
-        margin-left: 2%;
+        padding-left: 2%;
     }
 }
 
